tests/neg/unroll-abstractMethod.check
-- Error: tests/neg/unroll-abstractMethod.scala:6:6 --------------------------------------------------------------------
6 |  def foo(s: String, n: Int = 1, @unroll b: Boolean = true): String // error
  |      ^
  |      Unrolled method must be final and concrete
-- Error: tests/neg/unroll-abstractMethod.scala:10:6 -------------------------------------------------------------------
10 |  def foo(s: String, n: Int = 1, @unroll b: Boolean = true): String // error
   |      ^
   |      Unrolled method must be final and concrete
